--- a/SubscriberService/Dockerfile
+++ b/SubscriberService/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:11
-COPY target/subscriber-service.jar  /usr/app/
+COPY target/SubscriberService-0.0.1-SNAPSHOT  /usr/app/
 ADD src/main/resource/application.properties application.properties
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","subscriber-service.jar","-Dspring.config.location=application.properties"]
