--- a/Investor-Service/pom.xml
+++ b/Investor-Service/pom.xml
@@ -40,23 +40,23 @@
 			<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
 			<version>3.1.0</version> <!-- Match your Spring Boot version -->
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
-		<!-- AspectJ runtime dependency -->
+		AspectJ runtime dependency
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.9.9</version> <!-- Use the latest version -->
+			<version>1.9.9</version> Use the latest version
 		</dependency>
 
-		<!-- AspectJ weaver dependency -->
+		AspectJ weaver dependency
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
-			<version>1.9.9</version> <!-- Use the latest version -->
+			<version>1.9.9</version> Use the latest version
 		</dependency>
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
@@ -76,7 +76,7 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
